--- a/多线程/多线程.md
+++ b/多线程/多线程.md
@@ -1,3 +1,5 @@
+
+
 # 多线程
 
 - 一个程序顺序执行流程
@@ -14,7 +16,7 @@
 
   - 继承Thread 类          覆盖run方法       
 
-  -  
+  - 
 
     ```
     package TestThread;
@@ -50,6 +52,84 @@
         public void run() {
             for (int i = 0; i < 1000; i++) {
                 System.out.println("$$$" + i);
+            }
+        }
+    }
+    
+    ```
+
+    
+
+- 状态
+  - Thread.sleep() : 限时等待 休眠
+  - Thread.yield（） 放弃cpu 回到就绪状态
+  - setDaemon（true）设置线程为守护线程 ，所有的非守护线程都结束时，进程就会结束
+  - t.join()  当前线程进入等待状态，直到 t   线程终止  才会恢复执行
+  - ![](C:\Users\颖宝\AppData\Roaming\Typora\typora-user-images\1556009089193.png)
+
+- 线程安全
+
+  - 当多线程共同访问同一个对象（临界资源的时候），如果破坏了不可分割的操作（原子操作），就可能发生数据不一致
+
+  - 代码：t1 t2分别往集合中 加入字母   add 方法中有sleep操作（强制cpu切换时间片 ），这时线程不安全放大（没有sleep cpu也可能切换）  线程锁！！！！
+
+    ```
+    package TestSychoronized;
+    
+    import static java.lang.Thread.sleep;
+    
+    public class testsynchronized {
+        public static void main(String[] args) throws InterruptedException {
+            MyList list = new MyList();
+            Thread t1 = new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    synchronized (list){
+                        list.add("c");
+                    }
+    
+    
+                }
+            });
+            Thread t2 = new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    synchronized (list){
+                        list.add("D");
+                    }
+    
+                }
+            });
+            t2.start();
+            t1.start();
+            try {
+                t1.join();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            t2.join();
+    
+            list.print();
+        }
+    
+    }
+    class MyList{
+        String[] data = {"A","B","","",""};
+        int index = 2;
+        public void add(String s){
+            data[index]= s;
+    
+            try {
+                sleep(100);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+    
+            index++;
+        }
+        public void print(){
+            for (int i = 0;i<data.length;i++){
+                System.out.println(data[i]);
             }
         }
     }
