--- a/多线程/多线程.md
+++ b/多线程/多线程.md
@@ -71,6 +71,12 @@
 
   - 当多线程共同访问同一个对象（临界资源的时候），如果破坏了不可分割的操作（原子操作），就可能发生数据不一致
 
+  - 同步代码块：synchronized （临界资源对象）{//对临界资源对象加锁
+
+    ​	//代码（原子操作）
+
+    }注：每个对象都有一个互斥锁标记，用来分配线程  只有拥有对象互斥锁标记的线程，才能进入对该对象枷锁的同步代码块  线程退出代码块时，会释放相应的互斥锁标记
+
   - 代码：t1 t2分别往集合中 加入字母   add 方法中有sleep操作（强制cpu切换时间片 ），这时线程不安全放大（没有sleep cpu也可能切换）  线程锁！！！！
 
     ```
@@ -136,4 +142,69 @@
     
     ```
 
+  - synchronized 方法修饰符，对当前对象（this）加锁的同步代码块 只有拿到o的锁标记的线程，才能调用o 的同步方法
+
+    ```
+    package TestSychoronized;
     
+    import static java.lang.Thread.sleep;
+    
+    public class testsynchronized {
+        public static void main(String[] args) throws InterruptedException {
+            MyList list = new MyList();
+            Thread t1 = new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    
+                        list.add("c");
+          
+                }
+            });
+            Thread t2 = new Thread(new Runnable() {
+                @Override
+                public void run() {
+                    
+                        list.add("D");
+                }
+            });
+            t2.start();
+            t1.start();
+            try {
+                t1.join();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+            t2.join();
+    
+            list.print();
+        }
+    
+    }
+    class MyList{
+        String[] data = {"A","B","","",""};
+        int index = 2;
+        synchronized public void add(String s){
+            data[index]= s;
+    
+            try {
+                sleep(100);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+    
+            index++;
+        }
+        public void print(){
+            for (int i = 0;i<data.length;i++){
+                System.out.println(data[i]);
+            }
+        }
+    }
+    
+    ```
+
+    
+
+- 线程通信：等待通知机制
+  - o.wait() : 必须出现在对o 加锁的同步代码块 线程会释放锁标记，进入等待状态 （进入o 的等待队列）
+  - o.notify()/notifyAll()  : 必须出现在对o 加锁的同步代码块，  从等待状态中释放一个/全部线程 （不一定会拿到锁）
